correction solver et solver tests